examples/pass/RRelim.stl
/** RRelim **/
global x; 
local l; 

/** Optimised **/ 
read(x,l); 

/** Unoptimised **/ 
read(x,l); 
read(x,l); 
