examples/fail/FRxl-RxlF.stl
/** RMFence2 **/

global x; 
local l; 

/** Optimised **/

read(x,l); 
fenceSC; 

/** Unoptimised **/ 

fenceSC; 
read(x,l); 

